--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1,4 +1,4 @@
- @if (isSuccess) {
+ @if (!isSuccess) {
  <div class="w-full" style="background: var(--surface-ground)">
      <p-fluid class="text-center w-full flex items-center md:items-center flex-col bg-auto md:bg-contain !bg-no-repeat"
          style="padding: 2% 10% 2% 10%; background: var(--exception-pages-image); background-size: contain;">
