--- a/src/app/pages/application-management/application-list/application-list.component.html
+++ b/src/app/pages/application-management/application-list/application-list.component.html
@@ -68,26 +68,14 @@
                 </td>
 
                 <td>
-                    <p-button (click)="op.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
-                        severity="info" />
-                    <p-popover #op>
-                        <div class="flex flex-col gap-1 w-[25rem]">
-                            <ul class="topbar-menu active-topbar-menu z-50 rounded">
-                                <li role="menuitem" class="!m-0 !mb-4">
-                                    <a [routerLink]="['/application',candidatura.tipo.toLowerCase(), candidatura.id]">
-                                        <i class="pi pi-fw pi-eye mr-2"></i>
-                                        <span>Detalho</span>
-                                    </a>
-                                </li>
-                                <li role="menuitem" class="!m-0">
-                                    <a [routerLink]="['/empresa', candidatura.id]">
-                                        <i class="pi pi-fw pi-trash mr-2"></i>
-                                        <span>Eliminar</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </p-popover>
+                    <a [routerLink]="['/application',candidatura.tipo.toLowerCase(), candidatura.id]" pTooltip="Detalho"
+                        tooltipPosition="top">
+                        <p-button icon="pi pi-eye" class="mr-2" severity="info" [rounded]="true" [outlined]="true" />
+                    </a>
+                    <a [routerLink]="['/empresa', candidatura.id]">
+                        <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
+                            pTooltip="Eliminar" tooltipPosition="top" />
+                    </a>
                 </td>
             </tr>
         </ng-template>
