--- a/src/app/pages/dados-mestre/lista/lista.component.html
+++ b/src/app/pages/dados-mestre/lista/lista.component.html
@@ -18,7 +18,6 @@
         </ng-template>
         <ng-template pTemplate="header" let-columns>
             <tr>
-                <th>No.</th>
                 @for (col of columns; track $index) {
                 <th>{{ col.header }}</th>
                 }
@@ -29,12 +28,9 @@
         </ng-template>
         <ng-template #body let-item let-columns="columns" let-rowIndex="rowIndex">
             <tr>
-                <td>
-                    {{ rowIndex + 1 }}
-                </td>
                 @for(col of columns; track col){
                 <td>
-                    @if (col.field === 'montante') {
+                    @if (col.field === 'montanteMinimo' || col.field === 'montanteMaximo') {
                     {{item[col.field] |currency}}
                     }@else {
                     {{item[col.field]}}
@@ -62,7 +58,15 @@
         <div class="grid grid-cols-12 gap-4">
             @switch (type) {
             @case ('atividade-economica') {
-
+            <div class="col-span-12">
+                <label for="tipoAtividadeEconomica" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    Tipo de Atividade Economica
+                </label>
+                <p-select [appendTo]="'body'" formControlName="tipoAtividadeEconomica" inputId="tipoAtividadeEconomica"
+                    [options]="tipoAtividadeEconomicaOpts" optionLabel="name" fluid [showClear]="true"
+                    placeholder="Selecione o tipo de atividade">
+                </p-select>
+            </div>
             <div class="mb-6 col-span-12">
                 <label for="codigo" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                     Código
@@ -77,7 +81,7 @@
             </div>
             <div class="mb-2 col-span-12">
                 <label for="tipo" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                    Tipo
+                    Categoria (Comercial/Industrial)
                 </label>
                 <p-select [appendTo]="'body'" formControlName="tipo" inputId="tipo" [options]="categoryOpts"
                     optionLabel="name" fluid [showClear]="true" placeholder="Selecione o Tipo Economico">
@@ -93,17 +97,39 @@
             </div>
             }
             @case ('taxas') {
+            <div class="mb-2 col-span-12">
+                <label for="categoria" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    Categoria (Comercial/Industrial)
+                </label>
+                <p-select [appendTo]="'body'" formControlName="categoria" inputId="categoria" [options]="categoryOpts"
+                    optionLabel="name" optionValue="value" fluid [showClear]="true" placeholder="Selecione a Categoria">
+                </p-select>
+            </div>
+            <div class="mb-2 col-span-12">
+                <label for="tipo" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    Tipo (Cadastro/Atividade)
+                </label>
+                <p-select [appendTo]="'body'" formControlName="tipo" inputId="tipo" [options]="aplicanteOpts"
+                    optionLabel="name" optionValue="value" fluid [showClear]="true" placeholder="Selecione o Tipo">
+                </p-select>
+            </div>
             <div class="mb-6 col-span-12">
                 <label for="ato" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                     Ato
                 </label>
                 <input formControlName="ato" id="ato" type="text" pInputText fluid />
             </div>
-            <div class="mb-6 col-span-12">
-                <label for="montante" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                    Montante
+            <div class="mb-6 col-span-12 md:col-span-6">
+                <label for="montanteMinimo" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    Montante Mínimo
                 </label>
-                <input formControlName="montante" id="montante" type="number" pInputText fluid />
+                <input formControlName="montanteMinimo" id="montanteMinimo" type="number" pInputText fluid />
+            </div>
+            <div class="mb-6 col-span-12 md:col-span-6">
+                <label for="montanteMaximo" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    Montante Máximo
+                </label>
+                <input formControlName="montanteMaximo" id="montanteMaximo" type="number" pInputText fluid />
             </div>
             }
             @case ('sociedade-comercial'){
